fix: alignment contact icon

--- a/src/sass/modules/buttons.sass
+++ b/src/sass/modules/buttons.sass
@@ -1,66 +1,56 @@
-.ui.button
-  margin: 0
-
-  & + &
-    margin-left: 10px
-
-  &.cta
-    background: $brand-blue
-    color: white
-    font-weight: 400
-    &:hover
-      background-color: lighten($brand-blue, 20%)
-
-  &.clear
-    background: none
-    color: white
-    font-weight: 400
-
-  &.load
-    min-width: 110px
-
-  &.return
-    margin-top: 14px
-
-  &.basic
-    &:hover
-      background: $hover
-
-  &.cycle
-    background: none
-    border: 1px solid $stroke
+.ui
+  &.button
     margin: 0
-    padding: 4px 0
 
-    &:hover
-      background: $hover
+    & + &
+      margin-left: 10px
 
-    .arrow.icon
+    &.cta
+      background: $brand-blue
+      color: white
+      font-weight: 400
+      &:hover
+        background-color: lighten($brand-blue, 20%)
+
+    &.clear
       background: none
-      width: 2em
+      color: white
+      font-weight: 400
 
-      &::before
-        display: block
-        position: absolute
-        width: 100%
-        top: 1.1em
-        font-size: 10px
+    &.load
+      min-width: 110px
+
+    &.return
+      margin-top: 14px
+
+    &.basic
+      &:hover
+        background: $hover
+
+    &.cycle
+      background: none
+      border: 1px solid $stroke
+      margin: 0
+      padding: 4px 0
+
+      &:hover
+        background: $hover
+
+      .arrow.icon
+        background: none
+        width: 2em
+
+        &::before
+          display: block
+          position: absolute
+          width: 100%
+          top: 1.1em
+          font-size: 10px
 
 
-.ui.buttons
-  .or
-    position: relative
-    width: .3em
-    height: 2.57142857em
-    z-index: 2
-
-
-.contact .card i.phone.icon
-  margin: 0 8px 0 -2px
-
-@media (max-width: 500px)
-  a
-    .domain
-      display: block
-      margin-left: 19px
-      line-height: 1em
+  &.buttons
+    .or
+      position: relative
+      width: .3em
+      height: 2.57142857em
+      z-index: 2
